# cabeza-engine

./: .gitignore  CMakeLists.txt  README.md  gmon.out  plays.txt  q
.cache/clangd/index/: color.hpp.AD206F7D95EB6F3D.idx  cui.cpp.6932F0D56821247E.idx  cui.h.49780BE48F769C4E.idx  eval.cpp.D69927520549CE62.idx  eval.h.426A9224A36E2D26.idx  game.cpp.C3E4138C6B901490.idx  game.h.4D5D7FB5645DA2E7.idx  main.cpp.71505E5773729EB6.idx  parsing.cpp.F7E0DF54E43C1768.idx  parsing.h.7DE0F5D6620C5BCE.idx  performance.cpp.A49970EBE5834895.idx  performance.h.F402ADCBA42BA5E9.idx  positioning.cpp.3335FD699B52FD70.idx  positioning.h.760778C2C1EE18F2.idx  search.cpp.2E3B0CEFBC9B1488.idx  search.h.FB4D23281F79A3BD.idx  transposition.cpp.BA9CE743C13C6196.idx  transposition.h.ACBACBE1470AE77C.idx  util.h.854EF5630A9BCA04.idx
img/: Cabeza Readme.drawio
src/: color.hpp  console_graphics_helper.cpp  cui.cpp  cui.h  eval.cpp  eval.h  game.cpp  game.h  graphics.cpp  graphics.h  graphics_console.cpp  graphics_console.h  main.cpp  move_ordering.h  movements.cpp  movements.h  parsing.cpp  parsing.h  performance.cpp  performance.h  positioning.cpp  positioning.h  search.cpp  search.h  transposition.cpp  transposition.h  util.h
